fixed spacing issue

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
   margin-bottom: 0px;
 }
 
+.services {
+  padding-top: 10px;
+}
+
 .center {
   padding-top: 10px;
   padding-bottom: 10px;
